# engine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  premake5.lua
coel/: premake5.lua
coel/src/: coel.hpp
coel/src/coel/: event.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
dep/debug/: CMakeLists.txt  README.md
dep/debug/include/debug/: debug.hpp  log.hpp  profile.hpp  timer.hpp
dep/debug/src/: CMakeLists.txt
dep/debug/src/core/: profile.cpp  timer.cpp
dep/debug/tests/: CMakeLists.txt  master_test.cpp
dep/imgui/: CMakeLists.txt
dep/imgui/src/imgui/: imgui.cpp
include/coel/: coel.hpp  core.hpp  events.hpp  layout.hpp  renderer.hpp  window.hpp
include/coel/renderer/: buffer.hpp  context.hpp  shader.hpp
src/: Buffer.hpp  CMakeLists.txt  Coel.hpp  Context.hpp  Core.hpp  Events.hpp  Layout.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Window.hpp  coel.hpp
src/Coel/: Camera.cpp  Camera.hpp  Input.hpp  Model.cpp  Model.hpp  Window.cpp  Window.hpp
src/Coel/Renderer/: Batch.cpp  Batch.hpp  Batch2d.cpp  BatchText.cpp  Buffer.cpp  Buffer.hpp  Command.cpp  Command.hpp  Context.cpp  Context.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Coel/Renderer/Assets/: Batch2dShader.hpp
src/Coel/Renderers/: Batch2d.cpp  Batch2d.hpp  Batch3d.cpp  Batch3d.hpp  BatchText.cpp  BatchText.hpp  ImGui.cpp  ImGui.hpp  Quad2D.cpp  Quad2d.cpp  Quad2d.hpp  Sprite.cpp  Sprite.hpp
src/Coel/Renderers/Assets/: Batch2dShader.hpp  BatchTextShader.hpp
src/Coel/Renderers/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.hpp  ImGuiTextEditor.cpp  ImGuiTextEditor.hpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/Opengl/: Buffer.cpp  Common.hpp  Context.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/Windows/: Window.cpp
src/coel/: events.hpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/coel/addons/app/: app.cpp  app.hpp
src/coel/addons/gui/: gui.cpp  gui.hpp
src/coel/addons/window_manager/: window_manager.hpp
src/coel/core/: app.hpp  events.hpp  renderer.hpp  window.hpp
src/coel/core/renderer/: context.hpp  texture.hpp
src/coel/platform/opengl/: opengl_buffer.cpp  opengl_context.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_texture.cpp
src/coel/platform/windows/: windows_window.cpp
src/coel/renderer/: batch2d.cpp  batch3d.cpp  custom.cpp  renderer.cpp
src/coel/renderer/shaders/: batch2d_fs.glsl  batch2d_gs.glsl  batch2d_vs.glsl
src/plat/opengl/: common.hpp  opengl_buffer.cpp  opengl_context.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_texture.cpp
src/plat/windows/: windows_window.cpp
test/: Buffers.cpp  CMakeLists.txt  Window.cpp  premake5.lua
test/src/: test.cpp
testing/: premake5.lua
testing/src/: shader_src.hpp  testing.cpp
tests/: CMakeLists.txt  master_test.cpp
